# libspnavdev

./: .gitmodules  CMakeLists.txt  README.md  config.h.in
.github/workflows/: cd.yml  test.yml
examples/web/: CMakeLists.txt  test.c  test.html
src/: serdev.c  serio.h  serio_posix.c  serio_win32.c  spnavdev.c  spnavdev.h  usbdev.c  webhidapi.h
